update with better ui

--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
 
   <div class="container">
     <div id="main" role="main">
-      <h1>Vis</h1>
+      <h1>West Seattle Streets</h1>
+      <p>Type in a Regex below to highlight all the streets that match it! Zoom, pan, and Mouse-over to explore more.</p>
+      <p>Examples: <a href="#" class="example-link" data-regex="^southwest">^southwest</a>, <a href="#" class="example-link" data-regex="southwest$">southwest$</a>, <a href="#" class="example-link" data-regex=".*cali.*">.*cali.*</a>, <a href="#" class="example-link" data-regex=".*trail.*">.*trail.*</a></p>
+      <div>
+      <span>Search For:</span>
       <input id="search"></input>
+      </div>
       <div id="vis"></div>
     </div>
   </div> <!--! end of #container -->
